    configuration file and hence tests the new feature mentioned above.
  * Skip tests which involve the non-readabliity of files if run as
    root. (Closes: #789832)
  * Catch some more cases of minor differences in output.
  * Fix race-condition in t/expand_environment_variables.t and
    t/moving-to-existing-subdir.t by enforcing older mtime.

  Packaging, build system, documentation and file layout changes:

  * Change section from x11 to utils. It's far more than just an Xsession
    hook nowadays.
  * Declare compliance with Debian Policy 3.9.8 (no other changes needed)
  * Update copyright years in debian/copyright.
  * Rename debian/unburden-home-dir.* to debian/* for consistency.
  * Extract common logic for Xsession.d files into a separate file.
  * Split up documentation into several Markdown files in a separate
    directory. Support mkdocs to generate HTML documents from them.
    + Add build-dependency on mkdocs and moreutils (for sponge).
    + No more install README.md as documentation.
    + Drop override for dh_installdocs.
    + Register them with doc-base.
  * Generate man pages from Markdown, too, using ronn.
    + Add ruby-ronn as build-dependency.
  * Use "gzip -n" to make sure the build stays reproducible.
  * Support build profiles nocheck and nodoc.
    + Bump debhelper build-dependency to ≥ 9.20141010
    + Add build-dependency on dpkg-dev ≥ 1.17.14.
  * Add symlink from LICENSE to COPYING to please flint.
  * Add CONTRIBUTING.md to guide contributors via GitHub.
  * Many documentation updates, including these:
    + Take into account that Gitorious has been closed.
    + ReadTheDocs changed the domain for hosted projects from .org to .io
    + Updated links to BleachBit, Mundus and AutoTrash.
    + Changed links from http:// to https:// where possible.
    + Mention rmlint.
  * Mention SD and CF cards in long package description and documentation.
  * Switch Vcs-Git header from git:// to https://.